# CPPuddle

./: .gitignore  .gitmodules  CMakeLists.txt  CPPuddle-config.cmake  README.md  README_8md.html  aggregation__executor__pools_8hpp.html  aggregation__executor__pools_8hpp__dep__incl.map  aggregation__executor__pools_8hpp__dep__incl.md5  aggregation__executor__pools_8hpp__incl.map  aggregation__executor__pools_8hpp__incl.md5  aggregation__executor__pools_8hpp_source.html  aggregation__executors__and__allocators_8hpp.html  aggregation__executors__and__allocators_8hpp__dep__incl.map  aggregation__executors__and__allocators_8hpp__dep__incl.md5  aggregation__executors__and__allocators_8hpp__incl.map  aggregation__executors__and__allocators_8hpp__incl.md5  aggregation__executors__and__allocators_8hpp_source.html  aggregation__manager_8hpp.html  aggregation__manager_8hpp__dep__incl.map  aggregation__manager_8hpp__dep__incl.md5  aggregation__manager_8hpp__incl.map  aggregation__manager_8hpp__incl.md5  aggregation__manager_8hpp_source.html  aligned__buffer__util_8hpp.html  aligned__buffer__util_8hpp__incl.map  aligned__buffer__util_8hpp__incl.md5  aligned__buffer__util_8hpp_source.html  aligned__recycling__allocators_8hpp.html  aligned__recycling__allocators_8hpp__dep__incl.map  aligned__recycling__allocators_8hpp__dep__incl.md5  aligned__recycling__allocators_8hpp__incl.map  aligned__recycling__allocators_8hpp__incl.md5  aligned__recycling__allocators_8hpp_source.html  allocator__aligned__test_8cpp.html  allocator__aligned__test_8cpp__incl.map  allocator__aligned__test_8cpp__incl.md5  allocator__hpx__test_8cpp.html  allocator__hpx__test_8cpp__incl.map  allocator__hpx__test_8cpp__incl.md5  (+441 more)
.github/: documentation.yml
.github/workflows/: cmake.yml  documentation.yml
.jenkins/: Jenkinsfile
docs/: CMakeLists.txt
examples/: cuda_vector_add.cu  kernel-aggregation-with-hpx-kokkos.cpp  recycling-with-hpx-cuda.cu  recycling-with-hpx-kokkos.cpp
external_dependencies/: 0001-Add-dumpversion-option-to-nvcc_wrapper.patch  cmake.patch  deep_copy.patch
include/: aggregation_manager.hpp  aligned_buffer_util.hpp  aligned_recycling_allocators.hpp  buffer_management_interface.hpp  buffer_manager.hpp  cuda_buffer_util.hpp  cuda_helper.hpp  cuda_recycling_allocators.hpp  cuda_util.hpp  hip_buffer_util.hpp  hip_recycling_allocators.hpp  hpx_buffer_util.hpp  kokkos_buffer_util.hpp  kokkos_viewpool.hpp  recycled_view.hpp  recycling_kokkos_view.hpp  std_recycling_allocators.hpp  stream_manager.hpp  sycl_buffer_util.hpp  sycl_recycling_allocators.hpp
include/cppuddle/common/: config.hpp
include/cppuddle/executor_recycling/: executor_pools_interface.hpp  executor_pools_management.hpp
include/cppuddle/executor_recycling/detail/: executor_pools_management.hpp
include/cppuddle/kernel_aggregation/: kernel_aggregation_interface.hpp  kernel_aggregation_management.hpp
include/cppuddle/kernel_aggregation/detail/: aggregation_executor_pools.hpp  aggregation_executors_and_allocators.hpp
include/cppuddle/kernel_aggregation/util/: kokkos_aggregation_util.hpp
include/cppuddle/memory_recycling/: aligned_recycling_allocators.hpp  buffer_management_interface.hpp  cuda_recycling_allocators.hpp  hip_recycling_allocators.hpp  recycling_kokkos_view.hpp  std_recycling_allocators.hpp  sycl_recycling_allocators.hpp
include/cppuddle/memory_recycling/detail/: buffer_management.hpp  cuda_underlying_allocators.hpp  hip_underlying_allocators.hpp  sycl_underlying_allocators.hpp
include/cppuddle/memory_recycling/util/: cuda_recycling_device_buffer.hpp  hip_recycling_device_buffer.hpp  recycling_kokkos_view.hpp
include/detail/: buffer_management.hpp  buffer_recycler.hpp  config.hpp
scripts/: README.md  build_dependencies.sh  build_hpx.sh  build_hpx_kokkos.sh  build_kokkos.sh  clean_dependencies.sh  configure_build_directory.sh  daint_env.sh  machine_configs.sh  spack_env.sh
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  (+64 more)
src/: allocator_aligned_test.cpp  allocator_cuda_test.cu  allocator_executor_stream_test.cpp  allocator_hpx_test.cpp  allocator_kokkos_executor_stream_test.cpp  allocator_kokkos_test.cpp  allocator_test.cpp  buffer_manager_definitions.cpp  hello.cpp  minimal_parallel_for.cpp  stream_manager_definitions.cpp  stream_test.cpp  stream_test.hpp
tests/: allocator_aligned_test.cpp  allocator_cuda_test.cu  allocator_executor_stream_test.cpp  allocator_hpx_test.cpp  allocator_kokkos_executor_for_loop_test.cpp  allocator_kokkos_executor_stream_test.cpp  allocator_kokkos_test.cpp  allocator_test.cpp  minimal_parallel_for.cpp  stream_test.cpp  stream_test.hpp  work_aggregation_cpu_triad.cpp  work_aggregation_cuda_triad.cpp  work_aggregation_test.cpp
